refractor: fix some broken links

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
 }
 
 @layer base {
+  :root {
+    color-scheme: dark;
+  }
+
   body {
     font-size: var(--text-base);
     background-color: var(--color-neutral-800);
